# Isles-of-Resistance

./: .gitignore  README.md  icon.svg.import  node_2d.tscn  project.godot
Scenes/: MainScene.tscn
Scripts/: MainMenu.gd  MainMenu.gd.uid  game_hud.gd  game_hud.gd.uid
backend/: CMakeLists.txt  backend.cpp  backend.h
backend/IoR_backend/: CMakeLists.txt  IoR_backend.cpp  IoR_backend.h
